--- a/distributions/xtreemfs-ubuntu-14.10/Dockerfile
+++ b/distributions/xtreemfs-ubuntu-14.10/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu
+FROM ubuntu:14.10
 MAINTAINER Christoph Kleineweber <kleineweber@zib.de>
 
 ENV DEBIAN_FRONTEND noninteractive
@@ -6,8 +6,8 @@ ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get -qy dist-upgrade
 RUN apt-get -qy install wget
 
-RUN echo "deb http://download.opensuse.org/repositories/home:/xtreemfs/xUbuntu_14.04 ./" >> /etc/apt/sources.list
-RUN wget -q http://download.opensuse.org/repositories/home:/xtreemfs/xUbuntu_14.04/Release.key -O - | apt-key add -
+RUN echo "deb http://download.opensuse.org/repositories/home:/xtreemfs/xUbuntu_14.10 ./" >> /etc/apt/sources.list
+RUN wget -q http://download.opensuse.org/repositories/home:/xtreemfs/xUbuntu_14.10/Release.key -O - | apt-key add -
 RUN apt-get -qy update
 
 RUN apt-get -qy install xtreemfs-client
