--- a/distributions/xtreemfs-opensuse-13.2/Dockerfile
+++ b/distributions/xtreemfs-opensuse-13.2/Dockerfile
@@ -1,7 +1,7 @@
 FROM opensuse:13.2
 MAINTAINER Christoph Kleineweber <kleineweber@zib.de>
 
-RUN zypper addrepo "http://download.opensuse.org/repositories/home:/xtreemfs/openSUSE_13.2/home:xtreemfs.repo"
+RUN zypper addrepo "http://download.opensuse.org/repositories/home:/xtreemfs:/unstable/openSUSE_13.2/home:xtreemfs:unstable.repo"
 
 RUN zypper --non-interactive --gpg-auto-import-keys ref
 
