--- a/distributions/xtreemfs-ubuntu-12.04/Dockerfile
+++ b/distributions/xtreemfs-ubuntu-12.04/Dockerfile
@@ -6,8 +6,8 @@ ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get -qy dist-upgrade
 RUN apt-get -qy install wget
 
-RUN echo "deb http://download.opensuse.org/repositories/home:/xtreemfs/xUbuntu_12.04 ./" >> /etc/apt/sources.list
-RUN wget -q http://download.opensuse.org/repositories/home:/xtreemfs/xUbuntu_12.04/Release.key -O - | apt-key add -
+RUN echo "deb http://download.opensuse.org/repositories/home:/xtreemfs:/unstable/xUbuntu_12.04 ./" >> /etc/apt/sources.list
+RUN wget -q http://download.opensuse.org/repositories/home:/xtreemfs:/unstable/xUbuntu_12.04/Release.key -O - | apt-key add -
 RUN apt-get -qy update
 
 RUN apt-get -qy install xtreemfs-client
