--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,15 @@ env:
     - DISTRIBUTION=centos-7
     - DISTRIBUTION=debian-7
     - DISTRIBUTION=debian-8
-    - DISTRIBUTION=fedora-20
     - DISTRIBUTION=fedora-21
     - DISTRIBUTION=fedora-22
+    - DISTRIBUTION=fedora-23
     - DISTRIBUTION=opensuse-13.2
     - DISTRIBUTION=opensuse-tumbleweed
     - DISTRIBUTION=ubuntu-12.04
     - DISTRIBUTION=ubuntu-14.04
     - DISTRIBUTION=ubuntu-15.04
+    - DISTRIBUTION=ubuntu-15.10
 services:
   - docker
 script:
